ui tweaks, medialistener and rp fixes